--- a/001.md
+++ b/001.md
@@ -1,3 +1,5 @@
+[TOC]
+
 
 
 # 一. 文档声明
@@ -7,7 +9,7 @@
 一个基本的完整的HTML代码如下:
 
 ```
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -23,8 +25,6 @@
 
 ## 说明:
 
-
-
 1. `<!DOCTYPE html>`  是html文档声明, 告诉浏览器当前的页面是HTML5页面, 让浏览器按照HTML5的语法格式去解析.  
 2. html文档声明必须放在HTML文档的最前面, 不能省略, 省略了会出现兼容性问题
 3. HTML5 的文档声明比 HTML4.01/ XHTML1.0 简洁非常多
@@ -38,7 +38,7 @@
  
 
 1. `html` 元素是HTML文档的根元素, 一个文档中只能有一个, 其它的所有元素都必须放在它里面
-2. W3C 标准建议为html 元素增加一个 lang 属性
+2. W3C 标准建议为html 元素增加一个 `lang ` 属性
    - lang属性的作用是帮助语言合成工具确定要使用的发音. 
    - 帮助翻译工具确定要使用的翻译规则
 
@@ -57,7 +57,18 @@
 
 1. head元素里面的内容是一些 `元数据`  *(元数据: 描述数据的数据)*
 
-> 一般用于描述网页的各种信息, 比如: `字符编码`  `网页标题` `网页图标` 等
+   >  一般用于描述网页的各种信息, 比如: `字符编码`  `网页标题` `网页图标` 等
+
+   ```
+   <head>
+       <meta charset="UTF-8">
+       <meta name="viewport"
+             content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"> 
+       <title>Document</title>
+   </head>
+   ```
+
+   
 
 
 
@@ -168,6 +179,12 @@ em单位是相对于font-size 进行计算的
 
 注意: 是这只内容在水平方向上的对齐方式
 
+> - 文字和图片都是内容
+>
+> - 这个属性会被子元素继承
+
+
+
 
 
 
@@ -226,7 +243,9 @@ div{
 
 
 
-## 3. @font-face
+## 3. @font-face 导入字体
+
+
 
 > @font-face 可以让网页支持自定义字体, 不再局限于系统自带字体.
 
@@ -1302,9 +1321,9 @@ div:not(div.one){ // 错误写法
 
 
 
+## 2. 伪元素 ::first-line (首行文字伪元素)
 
 
-### 1. 伪元素 ::first-line (首行文字伪元素)
 
 
 
@@ -1342,9 +1361,9 @@ div::first-line{
 
 
 
+## 3. 伪元素::first-letter (首字母伪元素)
 
 
-### 2. 伪元素::first-letter (首字母伪元素)
 
 > 首个字母微元素`::first-letter` 和首行字母伪元素的用法是一样的, 只是范围是首字母而已
 
@@ -1375,7 +1394,13 @@ div::first-letter{
 
 
 
- ### 3. 伪元素 ::before 和 ::after
+
+
+
+
+## 4. 伪元素 ::before 和 ::after (第一个元素和最后一个元素伪元素)
+
+
 
 > `::before和::after` 伪元素, 用来在一个元素的内容之前或者之后插入其他内容 (可以是文字, 图片)
 >
@@ -4130,7 +4155,9 @@ div{
 
 
 
-## 10.  CSS 属性- box-shadow
+## 10.  CSS 属性- box-shadow 边框阴影
+
+
 
 
 
@@ -4150,9 +4177,399 @@ div{
     // 第三个参数表示 模糊度 (可选)
     // 第四个参数表示 延伸度 (可以延长的范围)
     // 第五个参数表示 颜色 (必选)
-    box-shadow: 5px 7px 30px 10px gray;
+    // 第六个参数表示 外框阴影还是内框阴影 (可选)
+    box-shadow: 5px 7px 30px 10px gray inset;
+  }
+```
+  
+  ![Snip20191120_41](Snip20191120_41.png) 
+
+> 注意: 边框和阴影都会随着圆角变化
+>
+> 轮廓是不会因为阴影的变化而变化的
+
+
+
+
+
+- 元素可以设置多重阴影, 多个阴影之间使用逗号分隔即可
+
+  ```
+  div { // 多个阴影之间使用逗号分隔
+  	 box-shadow: 5px 7px 30px 10px gray ,
+  	 5px 7px 30px 10px blue ;
   }
   ```
 
-  ![Snip20191120_41](Snip20191120_41.png) 
+  
+
+
+
+## 11. CSS 属性- text-shadow  文字阴影
+
+
+
+- `text-shadow` 文字阴影, 用法类似于`border-shadow` , 用于个文字设置阴影效果
+- `text-shadow` 同样使用与 `::first-letter` `::first-line` 伪元素
+- 文字阴影和边框阴影一样, 同样可以设置多重阴影, 书写方法一样
+
+
+
+
+
+
+
+## 12. CSS属性- box-sizing
+
+
+
+- `box-sizing` 属性, 也是盒子模型相关的一个属性, 是用来设置盒子模型汇总宽高行为的一个属性
+
+  - `content-box` 
+
+    > padding border 都布置在width height外边, padding 和 border不在width 和 height的控制范围内
+
+  - `border-box` 
+
+    > padding border 都布置在width和height的里面, width 和 height 计算时包含padding 和border
+
+
+
+  ![Snip20191121_1](/Users/yangrui/Desktop/myNode/Snip20191121_1.png)
+
+![Snip20191121_2](/Users/yangrui/Desktop/myNode/Snip20191121_2.png)
+
+
+
+
+
+
+
+> 说一点历史遗留问题:
+>
+> - 如果盒子的width和height不包含padding和border的这种content-box模型, 其实是w3c的标准盒子模型, 以前是推荐使用 content-box 模型的
+>
+> -  但是以前呢, IE8以前,它就要搞一些特殊, IE8以前采用的是border-box 模型, 以前写代码时如果兼容IE8以前, 要用两套方案调代码
+>
+> - 但是后来,w3c发现IE讲的是有道理的, 这种border-box的盒子模型很好用. 所以w3c后面又加了一种`border-box` 的样式.
+>
+>   
+
+
+
+
+
+
+
+
+
+## 13. 元素的水平居中显示
+
+
+
+- 在一些需求中, 需要元素在父元素中水平居中显示
+
+  (父元素一般都是块级元素/ inline-block)
+
+  - 为什么子元素是在块级元素/ inline-block 中居中呢?
+    - 因为只有块级元素才有空间给你居中, 行内级元素的尺寸时内容决定, 没有空间给你居中
+
+
+
+
+
+
+
+
+
+### 1. 行内级/ inline-block 元素水平居中
+
+-  行内级元素/ inline-block 元素, 想要在父元素中水平居中 
+
+  - 请给父元素设置 `text-align:center` 
+
+  ```
+   <style> 
+     div {
+       background-color: pink;
+       text-align: center;
+     } 
+     span{
+       background-color: orange;
+     } 
+   </style>
+  ```
+
+  ```
+  <div>
+      <span>我是span</span>
+      <img src="a.jpg" alt="">
+  </div>
+  ```
+
+  ![Snip20191121_3](Snip20191121_3.png) 
+
+  - **注意:** `text-alogn` 属性是可以被子元素继承的, 所以父元素设置了 `text-align` 后, 所有的子元素会继承这个属性
+
+  ```
+  <style> 
+      div {
+          margin-top: 50px;
+          background-color: pink;
+          height: 100px;
+          // 这个属性是会被子元素继承的
+          text-align: center;
+      } 
+      strong {
+          display: inline-block;
+          background-color: yellow;
+          width: 250px;
+          height: 50px; 
+      } 
+  </style>
+  ```
+
+  ```
+  <div>
+       <strong> text-align属性是可以继承 </strong> 
+  </div>
+  ```
+
+  ![Snip20191121_6](Snip20191121_6.png) 
+
+
+
+
+
+
+
+
+
+### 3. 块级元素水平居中 (标准流)
+
+- 设置块级元素水平居中只需要给自己设置  `margin-left:auto;`  ` margin-right:auto;`
+
+  ```
+  <style>
+    div {
+      background-color: pink;
+      height: 100px;
+    }
+  
+    p {
+      background-color: yellow;
+      width: 50px;
+      height: 50px;
+  		// 设置 块级元素在父元素中水平居中
+      margin-left:auto;
+      margin-right:auto;
+      
+      // margin: 0 auto;
+    } 
+  </style>
+  ```
+
+  ```
+  <div>
+       <p></p>
+  </div>
+  ```
+
+  ![Snip20191121_4](Snip20191121_4.png) 
+
+  
+
+
+
+
+
+
+
+# 十三. Photoshop
+
+
+
+前端工程师, 一般使用PhotoShop的时候就两个, **测量** **切图** 
+
+
+
+
+
+
+
+# 十四 CSS属性 背景
+
+
+
+## 1. CSS属性- background-image
+
+- `background-image` 用于设置元素的背景图片
+
+  - `background-image` 会盖在`background-color`的上面
+
+  - 在图片的透明区域, 可以看到背景色
+
+  - 可以为同一个元素设置多张背景图片 (多张背景图依次叠加)
+
+    ```
+    background-image: url("bg1.png"), url("bg2.png");
+    ```
+
+    ![Snip20191121_7](Snip20191121_7.png) 
+
+    > 注意: 
+    >
+    > - 要看到背景图片, 标签必须要有大小
+    > - 如果一个标签设置多个背景图片, 先设置的背景图在最上面, 后设置的在下面
+    > - 默认背景图不会像img标签中显示图片一样压缩, 背景图片默认不压缩
+
+    
+
+
+
+## 2. CSS属性-  background-repeat
+
+- `background-repeat` 属性, 是用来设置背景图片是否要平铺
+
+  - 常见的取值
+    - `repeat`: 平铺  (默认就是这个值)
+    - `no-repeat` : 不平铺
+    - `repeat-x` 只在水平方向平铺
+    - `repeate-y` 只在垂直 方向上平铺
+
+- `background-repeat`属性存在的意义与应用场景
+
+  - 平铺实现规律背景图片
+
+    ![Snip20191121_8](Snip20191121_8.png) 
+
+  - 水平平铺实现按钮背景
+
+    ![Snip20191121_10](Snip20191121_10.png) 
+
+
+
+## 3. CSS属性- background-size
+
+- `background-size` 用于设置背景图片的大小
+
+  ```
+  // 宽度150px, 高度100px
+  background-size: 150px  100px;
+  
+  // 宽度保持原来的宽高比自动计算, 高度100px
+  background-size: auto 100px;
+  
+  // 高度保持原来的宽高比自动计算, 高度120px
+  background-size: 120px auto;
+  // 高度保持原来的宽高比自动计算, 高度150px
+  background-size: 150px;
+  ```
+
+- `background-size` 的取值也可以使用百分比
+
+  ```
+  <style>
+    div {
+      width: 100px;
+      height: 100px;
+      padding: 50px;
+      background-color: green;
+      background-image: url(./images/heart.gif);
+  
+      background-size: 50% 50% ;
+      background-repeat: no-repeat;
+    }
+  </style>
+  ```
+
+  
+
+  > 注意当,background-size 使用百分比来表示的时候, 其默认参考的是 `padding-box` 来计算的
+
+  ![Snip20191121_9](Snip20191121_9.png) 
+
+
+
+
+
+## 4. CSS 属性- background-position
+
+-  `background-position` 属性用于设置背景图片在水平/ 垂直方向上显示的具体位置
+
+  - 常用的取值
+
+    - 水平方向取值: ` left` `center` `right`
+    - 垂直方向取值: `top` `center` `bottom` 
+    - `可以是具体的像素 eg: 10px` `也可以是百分比,不常用` 
+
+  - 如果只设置了1个方向的值, 另一个方向默认是center
+
+    ```
+    div { // 第一个参数是水平方向, 第二个参数是垂直
+    	background-position:80px;
+    	// 等价于 background-position:80px center;
+    }
+    ```
+
+    
+
+  
+
+  ![Snip20191121_11](Snip20191121_12.png)  
+
+
+
+
+
+## 5. 背景图实现圆角图片
+
+
+
+- 滑动门
+
+  > div 里面放button, div 元素左右设置圆角背景, 中间button设置平铺背景
+
+  ![Snip20191121_13](Snip20191121_13.png) 
+
+  ```
+  div {
+  	width: 150px;
+  	height: 32px;
+  	// 设置多个背景图, 之间使用逗号分割
+  	background-image: url("left.png"), url("right.png");
+  	background-repreat: no-repreat, no-repeat;
+  	background-position: left center, right center;
+  	background-size: auto 32px, auto 32px;
+  	padding-left: 17px;
+  	padding-right: 17px;
+  }
+  
+  button {
+  	width: 100%
+  	height: 100%
+  	background-image: url("btn.png")
+  	background-repeat: repeat-x;
+  	border: none;
+  	outline:none;
+  	displau: block;
+  }
+  
+  ```
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
