--- a/001.md
+++ b/001.md
@@ -180,8 +180,8 @@ em单位是相对于font-size 进行计算的
 注意: 是这只内容在水平方向上的对齐方式
 
 > - 文字和图片都是内容
->
-> - 这个属性会被子元素继承
+>- 这个属性会被子元素继承
+> - 当内容的宽度超过或者等于元素的宽度时, 这个属性就不好使了 (这个是局限性)
 
 
 
@@ -1289,9 +1289,31 @@ div:not(div.one){ // 错误写法
 
 ##### 6.  元素状态伪类选择器
 
-`:enabled` `:disabled` `:checked` 
+- 元素状态伪类主要有以下3个,有时我们要根据元素的状态的不同现实不同的状态, 就需要用到元素状态伪类
 
+  >  `:enabled` `:disabled` `:checked` 
 
+  ```
+  <style>
+    input:enabled {
+      background-color: pink;
+    }
+    input:disabled {
+      background-color: red;
+    }
+    input:checked {
+      outline: 2px solid #f00;
+    }
+  </style>
+  ```
+
+  ```
+  <input  type="text" >
+  <input type="text" disabled>
+  男: <input type="checkbox" > 女: <input type="checkbox" checked>
+  ```
+
+  ![Snip20191122_26](Snip20191122_26.png) 
 
 
 
@@ -4180,15 +4202,17 @@ div{
     // 第六个参数表示 外框阴影还是内框阴影 (可选)
     box-shadow: 5px 7px 30px 10px gray inset;
   }
-```
-  
-  ![Snip20191120_41](Snip20191120_41.png) 
+  ```
 
-> 注意: 边框和阴影都会随着圆角变化
+
+
+​		 ![Snip20191120_41](Snip20191120_41.png) 
+
+​		
+
+>  注意: 边框和阴影都会随着圆角变化
 >
 > 轮廓是不会因为阴影的变化而变化的
-
-
 
 
 
@@ -4196,18 +4220,14 @@ div{
 
   ```
   div { // 多个阴影之间使用逗号分隔
-  	 box-shadow: 5px 7px 30px 10px gray ,
-  	 5px 7px 30px 10px blue ;
-  }
+    	 box-shadow: 5px 7px 30px 10px gray ,
+    	 5px 7px 30px 10px blue ;
+    }
   ```
 
   
 
-
-
-## 11. CSS 属性- text-shadow  文字阴影
-
-
+  ## 11. CSS 属性- text-shadow  文字阴影
 
 - `text-shadow` 文字阴影, 用法类似于`border-shadow` , 用于个文字设置阴影效果
 - `text-shadow` 同样使用与 `::first-letter` `::first-line` 伪元素
@@ -4219,9 +4239,9 @@ div{
 
 
 
+
+
 ## 12. CSS属性- box-sizing
-
-
 
 - `box-sizing` 属性, 也是盒子模型相关的一个属性, 是用来设置盒子模型汇总宽高行为的一个属性
 
@@ -4229,35 +4249,21 @@ div{
 
     > padding border 都布置在width height外边, padding 和 border不在width 和 height的控制范围内
 
-  - `border-box` 
-
-    > padding border 都布置在width和height的里面, width 和 height 计算时包含padding 和border
-
-
-
-  ![Snip20191121_1](/Users/yangrui/Desktop/myNode/Snip20191121_1.png)
-
-![Snip20191121_2](/Users/yangrui/Desktop/myNode/Snip20191121_2.png)
-
-
-
-
+  - `border-box`
+  
+  - > padding border 都布置在width和height的里面, width 和 height 计算时包含padding 和border
+  
+    ![Snip20191121_1](Snip20191121_1.png) 
+  
+    ![Snip20191121_2](Snip20191121_2.png) 
 
 
 
 > 说一点历史遗留问题:
 >
 > - 如果盒子的width和height不包含padding和border的这种content-box模型, 其实是w3c的标准盒子模型, 以前是推荐使用 content-box 模型的
->
-> -  但是以前呢, IE8以前,它就要搞一些特殊, IE8以前采用的是border-box 模型, 以前写代码时如果兼容IE8以前, 要用两套方案调代码
->
+> - 但是以前呢, IE8以前,它就要搞一些特殊, IE8以前采用的是border-box 模型, 以前写代码时如果兼容IE8以前, 要用两套方案调代码
 > - 但是后来,w3c发现IE讲的是有道理的, 这种border-box的盒子模型很好用. 所以w3c后面又加了一种`border-box` 的样式.
->
->   
-
-
-
-
 
 
 
@@ -4276,41 +4282,55 @@ div{
 
 
 
-
-
-
-
-
-
 ### 1. 行内级/ inline-block 元素水平居中
 
 -  行内级元素/ inline-block 元素, 想要在父元素中水平居中 
 
   - 请给父元素设置 `text-align:center` 
 
-  ```
-   <style> 
-     div {
-       background-color: pink;
-       text-align: center;
-     } 
-     span{
-       background-color: orange;
-     } 
-   </style>
-  ```
 
-  ```
+
+```
+ <style> 
+   div {
+     background-color: pink;
+     text-align: center;
+   } 
+   span{
+    background-color: orange;
+   } 
+ </style>
+ 
   <div>
       <span>我是span</span>
       <img src="a.jpg" alt="">
   </div>
+```
+
+
+
+ ![Snip20191121_3](Snip20191121_3.png) 
+
+
+
+- **注意:** `text-alogn` 属性是可以被子元素继承的, 所以父元素设置了 `text-align` 后, 所有的子元素会继承这个属性
+
   ```
-
-  ![Snip20191121_3](Snip20191121_3.png) 
-
-  - **注意:** `text-alogn` 属性是可以被子元素继承的, 所以父元素设置了 `text-align` 后, 所有的子元素会继承这个属性
-
+<style> 
+      div {
+          margin-top: 50px;
+          background-color: pink;
+          height: 100px;
+          // 这个属性是会被子元素继承的
+          text-align: center;
+      } 
+      strong {
+          display: inline-block;
+          background-color: yellow;
+          width: 250px;
+          height: 50px; 
+      } 
+</style>
   ```
   <style> 
       div {
@@ -4327,25 +4347,19 @@ div{
           height: 50px; 
       } 
   </style>
-  ```
-
-  ```
+```
   <div>
        <strong> text-align属性是可以继承 </strong> 
   </div>
-  ```
+```
+
+
 
   ![Snip20191121_6](Snip20191121_6.png) 
 
-
-
-
-
-
-
-
-
 ### 3. 块级元素水平居中 (标准流)
+
+
 
 - 设置块级元素水平居中只需要给自己设置  `margin-left:auto;`  ` margin-right:auto;`
 
@@ -4355,41 +4369,28 @@ div{
       background-color: pink;
       height: 100px;
     }
-  
     p {
       background-color: yellow;
       width: 50px;
       height: 50px;
-  		// 设置 块级元素在父元素中水平居中
+      // 设置 块级元素在父元素中水平居中
       margin-left:auto;
       margin-right:auto;
-      
       // margin: 0 auto;
     } 
   </style>
   ```
 
-  ```
-  <div>
-       <p></p>
-  </div>
-  ```
 
-  ![Snip20191121_4](Snip20191121_4.png) 
-
-  
-
-
-
-
-
-
-
+  		 ![Snip20191121_4](Snip20191121_4.png)  
+     
 # 十三. Photoshop
 
-
-
 前端工程师, 一般使用PhotoShop的时候就两个, **测量** **切图** 
+
+
+
+
 
 
 
@@ -4403,27 +4404,28 @@ div{
 
 ## 1. CSS属性- background-image
 
+
+
 - `background-image` 用于设置元素的背景图片
 
   - `background-image` 会盖在`background-color`的上面
-
-  - 在图片的透明区域, 可以看到背景色
-
+- 在图片的透明区域, 可以看到背景色
   - 可以为同一个元素设置多张背景图片 (多张背景图依次叠加)
 
-    ```
-    background-image: url("bg1.png"), url("bg2.png");
-    ```
+  ```
+  background-image: url("bg1.png"), url("bg2.png");
+  ```
+  
+  ![Snip20191121_7](Snip20191121_7.png) 
+  
+  > 注意: 
+  >
+  > - 要看到背景图片, 标签必须要有大小
+  > - 如果一个标签设置多个背景图片, 先设置的背景图在最上面, 后设置的在下面
+  > - 默认背景图不会像img标签中显示图片一样压缩, 背景图片默认不压缩
 
-    ![Snip20191121_7](Snip20191121_7.png) 
 
-    > 注意: 
-    >
-    > - 要看到背景图片, 标签必须要有大小
-    > - 如果一个标签设置多个背景图片, 先设置的背景图在最上面, 后设置的在下面
-    > - 默认背景图不会像img标签中显示图片一样压缩, 背景图片默认不压缩
-
-    
+​    
 
 
 
@@ -4522,7 +4524,7 @@ div{
 
 
 
-## 5. 背景图实现圆角图片
+## 5. 背景图实现圆角 按钮
 
 
 
@@ -4561,6 +4563,485 @@ div{
 
 
 
+## 6. 背景图 大图片适配
+
+```
+ div {
+   /* 不建议设置宽度为图片原始宽度 */
+   /*width: 1920px;*/
+
+  /* 让小屏幕的浏览器也能看见最中间的内容
+  min-width的宽度要能够包含主要内容
+  */
+  min-width: 1100px;
+  /* 跟背景图片一样高度 */
+  height: 489px;
+  /* 让背景图片居中 */
+  background-image: url("images/mhxy.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+```
+
+
+
+
+
+## 7. 背景图- sprite  雪碧 精灵图
+
+
+
+### 1. CSS sprite 雪碧 精灵图介绍 
+
+
+
+- 什么是CSS sprite
+  - 是一种CSS图像合成技术, 将各种小图合并到一张图片上, 然后利用CSS的背景图定位来显示图片的对应部位
+  - 有人翻译为: CSS 雪碧, CSS精灵
+- 使用CSSSprite的好处
+  - 减少网页http请求的次数, 加快网页响应的速度, 减少服务器压力
+  - 减小图片的总大小
+  - 解决了图片命名的困扰, 只需要针对一张集合的图片命名
+  - 更换风格方便, 只需要在少数张图片上修改图片的颜色或者样式, 整个网页的风格就可以改变
+
+
+
+### 2. CSS sprite 雪碧 精灵图 制作
+
+
+
+- CSS sprite 雪碧 精灵图的制作简单3补
+
+  - 1. 设置元素的背景图` background-image: url("./cars.png");`
+
+  - 2. 设置背景图不平铺` background-repeat: no-repeat;`
+
+  - 3. 设置背景图的显示位置(position 偏移量) `background-position: -50px -30px`
+
+    ```
+    .icon1 {
+    	width = 50px; 
+    	height = 30px;
+    	background-color: #fff;
+    	
+    	background-image: url("./cars.png");
+    	background-repreat: no-repeat;
+    	background-position: -50px -30px;
+    }
+    ```
+
+    ![Snip20191122_1](Snip20191122_1.png) 
+
+
+
+
+
+### 3. CSS sprite 雪碧 精灵图的 注意点
+
+- 显示 Sprite 雪碧 精灵图的元素 包裹住精灵图即可, 不能设置的太大, 否则显示错误
+
+  ![Snip20191122_2](Snip20191122_2.png) 
+
+
+
+
+
+
+
+### 4. Sprite 制作
+
+https://www.toptal.com/developers/css/sprite-generator
+
+
+
+
+
+## 8. CSS 属性- background-attachment
+
+### 1. background-attchment 元素的使用介绍
+
+
+
+- `background-attachment`	 属性可以设置3个值
+
+  - `scroll` 背景图片跟随元素一起滚动 **(即: 依附在元素上)**(默认值)
+
+    > 背景图以元素为参考,定位在元素内, 不会随着元素内容的滚动而滚动, 但是会随着元素的位置移动
+
+    ![Snip20191122_7](Snip20191122_7.png) 
+
+  - `local` 背景图片跟随元素以及元素内容一起滚动 **(即, 依附在元素内容上)** 
+
+    > 背景图定位在元素内, 会随着内容的滚动而滚动, 有点像是定位在元素的画布上的感觉
+
+    ![Snip20191122_8](Snip20191122_8.png) 
+
+  - `fixed` 背景图片相对于浏览器窗口固定 **(依附在浏览器上)** 
+
+    > 背景图相对于浏览器定位, 但只在元素区域内可见
+
+    ![Snip20191122_9](Snip20191122_9.png) 
+
+
+
+### 2. background-attchment 的使用总结
+
+
+
+1. `background-attchment`属性是用来设置背景图的定位参考目标的, 其有3个取值`scroll` `local` `fixed` , 其中`scroll` 是默认取值
+2. `scroll` 和`local` 取值时, 背景图片的定位都是相对于元素的左上角定位的, 只有有一点不同, 当设置为`scroll` 时, 背景图不会随着元素内的内容的滚动而滚动, 有点被边框挡住的感觉. 当设置为`local` 是背景图会跟随着元素内容的滚动而滚动
+3. `fixed` 取值时, 元素的背景图是相对于浏览器定位的, 当浏览器页面滑动时, 背景图会跟随着移动, 只是, 只有元素的可见区域部分才能看见背景图
+
+
+
+### 3. background-attachment 的应用场景
+
+- 有时我们想实现一个背景图不动, 内容可以滚动的效果
+
+  > 应用场景, 经常和背景平铺一起使用
+
+  - 示例1: 整个网页一个背景
+
+  ```
+  <style> 
+    body {
+    background-image: url(./images/bg002.png);
+    background-attachment: local;
+    } 
+  </style>
+  
+  <body>
+    <p>1</p>
+    ... ...
+    <p>1000</p>
+  </body>
+  ```
+
+  ![Snip20191122_10](Snip20191122_10.png) 
+
+  -  示例2: div 是一个背景
+
+  ```
+   <style>
+    div {
+      width: 100px;
+      height: 100px;
+      overflow: auto;
+      background-image: url(./images/bg002.png);
+      background-attachment: fixed;
+    } 
+  </style>
+  ```
+
+  ```
+  <body>
+    <div>
+      <p>1</p>
+      ...
+      <p>100</p>
+    </div>    
+  </body>
+  ```
+
+  ![Snip20191122_11](Snip20191122_11.png) 
+
+​		
+
+
+
+
+
+## 9. CSS 属性- background
+
+
+
+- `background` 属性是一系列背景的相关属性的简写, 常用格式是:
+
+  - `image` `position/size` `repeat ` `attachment`  `color` 
+
+    > - background-size 可以省略, 如果不省略必须跟在background-position 后面
+    > - 其它属性都可以省略, 而且顺序任意
+
+    
+
+
+
+
+
+## 10. background-image  和 img 的选择
+
+
+
+- 利用`background-image` 和 `img` 都能实现图片的需求, 在开发时该如何选择呢? 
+
+  |                        | img              | background-image         |
+  | ---------------------- | ---------------- | ------------------------ |
+  | 性质                   | HTML元素         | CSS样式                  |
+  | 图片是否占用空间       | 占用空间         | 不占用空间               |
+  | 浏览器右键直接查看地址 | 可以             | 不可以                   |
+  | 支持CSS Sprite         | 不支持           | 支持                     |
+  | 更有可能被搜索引擎收录 | 能 (结合alt属性) | 不能                     |
+  | 加载顺序               | 优先加载         | 等加载完HTML元素后再加载 |
+
+- 总结:
+
+  - `img` 作为网页内容的重要组成部分, 比如: *广告图片/ logo图片/ 文章图片/ 产品图片* 
+
+  - `background-image` 可有可无, 有, 能让网页显示的更加美观, 无, 也不应用用户获取网页完整的内容信息
+
+  - 宗旨:
+
+    - 在没有任何CSS样式的情况下, 用户也能浏览网页中完整的内容信息
+
+      *网络出现问题或者服务器出现问题时, 有可能导致CSS文件加载失败* 
+
+
+
+
+
+
+
+
+
+## 11. 文档画布的背景 (颜色和图片)
+
+
+
+- **没有HTML元素对应着文档画布, 如何设置文档画布的背景? ** 
+
+  > 没有HTML元素对应着文档画布怎么理解呢?
+  >
+  > 1. html元素是html元素, body元素是body元素, 是没有一个元素对应着文档画布的.  
+  >
+  >    虽然有时我们直接通过html选择器或者body选择器设置背景色后, 整个浏览器的背景色都会跟着变, 但是其实我们看到的都是假象,  我们看到的整个页面不是html元素, 也不是body元素, 解释如下:
+
+  ```
+  <style>
+    html {
+      background-color: #f00;
+    }  
+  </style>
+  ```
+
+  ```
+  </head>
+   <body>
+  
+   </body>
+  </html>
+  ```
+
+  ![Snip20191122_12](Snip20191122_12.png)  
+
+  从上图我们到, 虽然整个浏览器都变成和body的颜色一样了, 但是body的实际高度只有内容的高度`22` , 所以以后不要再错误的理解, 整个浏览器的页面就是`body` 或者`HTML`
+
+  
+
+  
+
+  
+
+- **html 或者body 元素的背景都能够延伸到整个文档画布** 
+
+  > 怎么理解呢? 
+  >
+  > 也就是说:
+  >
+  > 当 html设置背景body不设置背景, 浏览器的背景就为html的背景
+  >
+  > 当html不设置背景body设置背景, 浏览器的背景就为body的背景
+
+
+
+- **如果同时设置了html和body元素的背景, 根元素HTML的背景才会作为文档画布背景**
+
+  > 怎么理解呢? 
+  >
+  > 也就是说:
+  >
+  > html设置背景 且 body设置背景, 浏览器的背景就为html的背景 
+
+
+
+
+
+- 一般来说, 我们建议通过 body来设置背景色
+
+
+
+
+
+## 11.伪元素 ::first-line 的背景
+
+
+
+- `::first-line`  虽然意为第一行内容, 但是它的背景并不一定填满一行, 取决于各种因素
+
+  - 文字大小/ 容器宽度/ 文字的对齐方式
+
+  ```
+  div::first-line {
+  	background-color: #00f;
+  }
+  ```
+
+  ![Snip20191122_13](Snip20191122_14.png)  
+
+
+
+
+
+
+
+# 十五. CSS 属性- cursor 鼠标样式
+
+
+
+
+
+## 1. CSS 属性- cursor 的常用取值介绍
+
+
+
+- `cursor` 可以设置鼠标指针 (光标) 在元素上面显示的样式
+- `cursor`  常有的取值
+  - `auto` **默认就是这个值** 浏览器根据上下文决定指针的显示样式, 比如根据文本和非文本切换指
+  - `default` 由操作系统决定, 一般就是一个小箭头  ![Snip20191122_15](Snip20191122_15.png) 
+  - `pointer` 一只小手, 鼠标指针挪动到连接上面默认就是这个样式![Snip20191122_16](Snip20191122_16.png) 
+  - `text` 一条竖线, 鼠标指针挪动到文本输入框上main默认就是这个样式![Snip20191122_17](Snip20191122_17.png) 
+  - `none` 没有任何指针显示在元素上面
+
+
+
+
+
+## 2. CSS属性- cursor 设置图片
+
+- `cursor` 除了可以设置系统自带的一些值外, 还可以设置图片
+
+  ```
+  cursor: url('abc.png') 0 0 , pointer;
+  ```
+
+  - `url()` 后面的2个数字
+    - 分别代表在水平/ 垂直方向上的偏移, 不能设置负数
+    - `0和0` 代表图片左上角和指针是重叠的, 数值越大, 图片左上角会朝着指针左上角偏移
+    - 如果水平/ 垂直分别设置一半, 图片的中心点将和指针重叠
+  - 如果找不到图片就是用 pointer 作为cursor 的值. 
+
+  ![Snip20191122_20](Snip20191122_20.png) 
+
+
+
+
+
+# 十六. 画布和视口
+
+- 视口 (viewport)
+
+  - 文档的可视区域
+
+    ![Snip20191122_25](Snip20191122_25.png) 
+
+
+
+
+
+- 画布(Canvas)
+  - 用于渲染文档的区域 (就是浏览器中显示的整个网页部分称为文档)
+  - 文档的内容超出视口范围, 可以滚动查看
+
+- 宽高比
+
+  - 画布 >= 视口
+
+  
+
+
+
+# 十七. CSS 属性- 定位
+
+
+
+## 1. 标准流 (Normal Flow)
+
+- 默认情况下, 元素都是按照 normal flow进行定位的
+  - 从上到下, 从左到右按顺序排列
+  - **相互之间不存在层叠现象** 
+
+
+
+## 2. 相对定位 relative
+
+	### 1. 相对定位的介绍与使用
+
+
+
+- 相对定位的元素依然按照normal flow  标准流排布
+- 可以通过`left` `right` `top` `bottom` 进行定位
+  - 定位参照对象是`元素自己原来在标准流中的位置`
+
+> - 设置相对定位后,元素还是按照`normal flow` 标准流来进行排布
+> - 设置相对定位后, 不论元素的定位有没有发生变化, 元素原来占有的位置依然存在, 也就是说前面的元素相对定位改变了位置后不影响后边元素标准流的定位
+
+```
+<style>
+div {
+  width: 100px;
+  height: 100px;
+}
+.box1 {
+  background-color: #ff0000;
+}
+.box2 {
+  background-color: #00ff00 ;
+  // 设置相对定位 
+  position: relative;
+  left: 50px;
+  top: -50px;
+}
+.box3 {
+  background-color: #0000ff;
+}
+</style>
+```
+
+```
+ <body>
+   <div class="box1"></div>
+   <div class="box2"></div>
+   <div class="box3"></div>
+ </body>
+```
+
+![Snip20191122_21](Snip20191122_21.png) 
+
+
+
+
+
+### 2. 相对定位的应用场景
+
+-  主要是在不影响其它元素的定位前提下,对元素自己的位置进行微调
+
+  ![Snip20191122_22](Snip20191122_22.png) 
+
+- 元素居中 (上下 左右居中)
+
+  ```
+  img {
+  	position: relative;
+  	margin-left: -960px;
+  	left: 50%;
+  }
+  
+  // 这里的原理相当于是2个属性相减
+  // 1. margin-left: -960px; 先往左边挪动 一定距离
+  // 2. left: 50% ; 再往右边挪动父元素的一半
+  // 最后的结果就是 -960px - 50%
+  ```
+
+  ![Snip20191122_23](Snip20191122_23.png) 
 
 
 
@@ -4572,4 +5053,48 @@ div{
 
 
 
+## 3. 静态定位 static
 
+- `position` 属性的默认值就是静态定位`static`
+
+- 静态定位`static`的元素按照 normal flow 标准流排布
+
+- `left` `right` `bottom` `top`  对静态定位`static` 没有任何作用
+
+  > 一般来说我们不用静态定位, 因为默认就是静态定位, 有个了解就对了
+
+
+
+
+
+## 4. 固定定位-  fixed
+
+
+
+### 1. 固定定位 fixed 的介绍
+
+- 固定定位`fixed`的元素会脱离normal flow 标准流 (一般我们称为: 脱标)
+
+- 固定定位`fixed` 的元素, 也是通过`left` `right` `top` `bottom`  这4个属性来定位
+
+  - 固定定位的参考对象是视口(viewport), 一般你可以理解为浏览器的窗口就是视口
+
+- 固定定位`fixed` 的元素, 当画布滚动时, 固定不动
+
+  ![Snip20191122_24](Snip20191122_24.png) 
+
+
+
+
+
+
+
+## 5. 脱标的特点
+
+- 脱标后的元素可以随意设置宽高, 不再受行内和块级的约束
+- 脱标后的元素, 宽度默认由内容决定
+- 脱标后的元素, 不再受标准流的约束
+  - 不再严格按照从上到下, 从左到右排布约束
+  - 不再严格区分块级/ 行内级, 块级, 行内级的很多特定都会消失
+- 不再给父元素汇报宽度数据
+- 脱标元素内部的子元素, 默认还是按照标准流排布.
