--- a/001.md
+++ b/001.md
@@ -4316,6 +4316,8 @@ div{
 - **注意:** `text-alogn` 属性是可以被子元素继承的, 所以父元素设置了 `text-align` 后, 所有的子元素会继承这个属性
 
   ```
+  
+  ```
 <style> 
       div {
           margin-top: 50px;
@@ -4347,7 +4349,7 @@ div{
           height: 50px; 
       } 
   </style>
-```
+  ```
   <div>
        <strong> text-align属性是可以继承 </strong> 
   </div>
@@ -4363,7 +4365,7 @@ div{
 
 - 设置块级元素水平居中只需要给自己设置  `margin-left:auto;`  ` margin-right:auto;`
 
-  ```
+```
   <style>
     div {
       background-color: pink;
@@ -4458,10 +4460,10 @@ div{
   ```
   // 宽度150px, 高度100px
   background-size: 150px  100px;
-  
+
   // 宽度保持原来的宽高比自动计算, 高度100px
   background-size: auto 100px;
-  
+
   // 高度保持原来的宽高比自动计算, 高度120px
   background-size: 120px auto;
   // 高度保持原来的宽高比自动计算, 高度150px
@@ -4478,7 +4480,7 @@ div{
       padding: 50px;
       background-color: green;
       background-image: url(./images/heart.gif);
-  
+
       background-size: 50% 50% ;
       background-repeat: no-repeat;
     }
@@ -4507,14 +4509,15 @@ div{
 
   - 如果只设置了1个方向的值, 另一个方向默认是center
 
-    ```
+  ```
     div { // 第一个参数是水平方向, 第二个参数是垂直
     	background-position:80px;
     	// 等价于 background-position:80px center;
     }
     ```
 
-    
+
+​    
 
   
 
@@ -4803,7 +4806,7 @@ https://www.toptal.com/developers/css/sprite-generator
 
 
 
-## 11. 文档画布的背景 (颜色和图片)
+## 11. 文档画布的背景 (颜色和图片) 坑
 
 
 
@@ -4971,9 +4974,13 @@ https://www.toptal.com/developers/css/sprite-generator
 
 
 
-## 2. 相对定位 relative
+## 2. 相对定位 relative (相对于自己原来定位)
 
-	### 1. 相对定位的介绍与使用
+
+
+
+
+### 1. 相对定位的介绍与使用
 
 
 
@@ -5053,7 +5060,7 @@ div {
 
 
 
-## 3. 静态定位 static
+## 3. 静态定位 static (默认定位)
 
 - `position` 属性的默认值就是静态定位`static`
 
@@ -5067,7 +5074,7 @@ div {
 
 
 
-## 4. 固定定位-  fixed
+## 4. 固定定位-  fixed (相对于视口定位)
 
 
 
@@ -5077,7 +5084,9 @@ div {
 
 - 固定定位`fixed` 的元素, 也是通过`left` `right` `top` `bottom`  这4个属性来定位
 
-  - 固定定位的参考对象是视口(viewport), 一般你可以理解为浏览器的窗口就是视口
+  - **固定定位的参考对象与相对定位的参考对象不同, 相对定位relative的参考对象是元素原来在标准流中的位置, 而固定定位的参考对象是视口(viewport), 一般你可以理解为浏览器的窗口就是视口** 
+
+    ![Snip20191122_25](Snip20191122_25.png) 
 
 - 固定定位`fixed` 的元素, 当画布滚动时, 固定不动
 
@@ -5092,9 +5101,470 @@ div {
 ## 5. 脱标的特点
 
 - 脱标后的元素可以随意设置宽高, 不再受行内和块级的约束
-- 脱标后的元素, 宽度默认由内容决定
+- 脱标后的元素, **宽度默认由内容决定**
 - 脱标后的元素, 不再受标准流的约束
   - 不再严格按照从上到下, 从左到右排布约束
   - 不再严格区分块级/ 行内级, 块级, 行内级的很多特定都会消失
 - 不再给父元素汇报宽度数据
 - 脱标元素内部的子元素, 默认还是按照标准流排布.
+
+
+
+```
+ <style>
+  .box1 {
+    background-color: #f00;
+    padding-left: 50px;;
+  }
+  .box2 {
+    background-color: #00ff00;
+    position: fixed;
+  }
+  .box3 {
+    background-color: #0000ff;
+    padding-left: 50px;;
+  } 
+</style>
+
+<body>
+  <div class="box1">box1</div>
+  <div class="box2">box2</div>
+  <div class="box3">box3</div>
+</body>
+```
+
+![Snip20191122_27](Snip20191122_27.png) 
+
+
+
+
+
+## 6. 绝对定位- absolute 
+
+
+
+
+
+### 1. 绝对定位的特点介绍
+
+- 绝对定位`absolute` 的元素和固定定位`fixed` 的元素一样, 都会脱离标准流`normal flow`
+
+- 绝对定位的元素和固定定位的元素一样, 都是通过`top` `bottom` `left` `right` 4个属性进行定位
+
+- 绝对定位元素的参考位置和固定定位元素参考的位置不一样, 固定定位的元素脱标后是参考视口(默认浏览器窗口就是视口)来定位, 而绝对定位是参考最邻近的定位父元素进行定位,如果绝对定位没有找到最邻近的定位父元素就参考视口定位
+
+  > `position` 设置为 `relative` 或`absolute` 或`fixed`  的父元素, 都可以作为绝对定位的参考元素
+
+- 绝对定位的元素在布局上和固定定位的元素在布局上特点是一样的, 只是他们定位是参考的对象不同而已. 
+
+
+
+### 2. 绝对定位元素的特点
+
+- 绝对定位的元素, 可以自己设定定位参考对象
+- 给最近的想定位的父元素, 设置 position 为非 static 就可以参考它定位 
+
+
+
+
+
+
+
+
+
+
+
+## 7. 定位元素介绍
+
+
+
+**1. 什么是定位元素?** 
+
+元素属性position 为 fixed 或 relative 或者 fixed 的元素, 我们都称为定位元素
+
+
+
+**2. 定位元素的特点**
+
+定位的元素都可以通过 `top` `bottom` `left` `right`  对元素的定位进行调整
+
+
+
+**3.不同类型的定位元素之间的差异**
+
+- `absolute` 和 `fixed` 类型的定位元素在标准流中不再占用原来的位置, 但是`relative` 类型的元素在标准流中还是占用原来的位置
+- `absolute` 和 `fixed` 类型的定位元素的尺寸由内容决定, 可以随意设置宽高, 而`relative` 类型的定位元素的宽高仍然由元素的 `display` 属性决定
+
+
+
+
+
+## 8. 绝对定位技巧 (*) 很重要
+
+- 绝对定位元素 (absolutely position)
+- `position` 属性的值为`absolute` 或者`fixed` 的元素, 我们成为绝对定位元素
+- 款高 或 margin 适配
+- 有了这个技巧后, 我们在定位父元素内布局绝对定位的子元素将变得 更加的灵活和简单
+
+
+
+### 1. 技巧1:  计算公式介绍
+
+
+
+- 被定位元素的 `left` + `margin-left` + `width` + `margin-right` +`right` = 参照对象的宽度
+
+- 被定位元素的 `top` + `margin-top` + `height` + `margin-bottom` +`bottom` = 参照对象的高度
+
+  上面2句话怎么理解呢? 看下面这幅图: 
+
+  ![Snip20191125_1](Snip20191125_1.png) 
+
+  > 1. 绝对定位元素的 `left` + `margin-left` + `width` +`margin-right` + `right` = 父定位元素的宽, 这个的意思是当定位父元素的尺寸确定后, 可以通过这个一个公式自动的套出子元素的尺寸
+
+
+
+
+
+### 2. 子元素尺寸确定, 位置自动适配
+
+- `left` `top` `right` `bottom` 和`width` `height` 决定后 自动计算适配 `margin`
+
+```
+<style>
+
+.box1 {
+  width: 200px;
+  height: 200px;
+  background-color: #ff0000;
+  position: relative;
+}
+
+.box2{
+  position: absolute;
+  background-color: #0f0;
+
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+	width: 100px;
+  height: 100px;
+  
+  // 位置适配/ 宽高适配
+  margin: auto; 
+}
+</style>
+```
+
+```
+<body>
+  <div class="box1">
+  	<div class="box2"></div>
+  </div>
+</body>
+```
+
+![Snip20191125_2](Snip20191125_2.png) 
+
+​	
+
+### 3. 宽高适配
+
+```
+<style>
+
+   .box1 {
+       width: 200px;
+       height: 200px;
+       background-color: #ff0000;
+       position: relative;
+   }
+    .box2{
+        position: absolute;
+        background-color: #0f0;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        margin: 10px 20px 30px 40px; 
+        // 宽高适配
+    } 
+</style>
+```
+
+```
+<body>
+  <div class="box1">
+  	<div class="box2"></div>
+  </div>
+</body>
+```
+
+![Snip20191125_3](Snip20191125_3.png) 
+
+
+
+## 9. 定位总结
+
+
+
+
+
+### 1. 各种定位元素特点概览
+
+|                     | 是否脱离标准流 | 是否是定位元素 | 绝对定位元素 | 定位参考对象                 |
+| ------------------- | -------------- | -------------- | ------------ | ---------------------------- |
+| static (静态定位)   | 否             | 否             | 否           | 否                           |
+| relative (相对定位) | 否             | 是             | 否           | 元素自己原来在标准流中的位置 |
+| absolute (绝对定位) | 是             | 是             | 是           | 最近的定位父元素或视口       |
+| fixed (固定定位)    | 是             | 是             | 是           | 视口                         |
+
+
+
+### 2. 定位的参考点总结
+
+
+
+- 相对定位元素, 参考自己原来在标准流中的位置定位
+- 固定定位参考视口定位
+- 固定定位相对于最近的定位父元素定位或视口定位
+
+
+
+### 3. 修改 position 属性前后对照
+
+定位元素(设置 position 为 relative 或 fixed 或 absolute 的元素)如果没有设置过 `top` `bottom` `left` `right` 属性, 那么元素的位置就是原来标准流中的位置
+
+
+
+
+
+
+
+
+
+## 10. 子绝父相
+
+- 在绝大数情况下, 子元素的绝对定位是相对于父元素进行的
+
+- 如果希望子元素相对于父元素进行定位, 又不希望父元素脱标, 常用的解决方案是:
+
+  - 父元素设置 `position: relative`
+
+  - 子元素设置`position: absolute`
+
+    > 简称: 子绝父相
+
+
+
+
+
+
+
+
+
+## 11. Z-index 属性
+
+
+
+### 1. 元素的层叠
+
+
+
+- 父子关系
+
+  - 子元素会层叠在父元素上
+
+- 非父子关系
+
+  - 都是非定位元素
+
+    - **在标准流中默认不存在层叠现象**  , 但是可以使用 负数`margin`  实现后面的层叠前面的
+
+      ```
+       .box {
+         width: 200px;
+         height: 260px;
+         background-color: #f00;
+       }
+      
+      .child1{
+        width: 100px;
+        height: 100px;
+        background-color: #0f0;
+      }
+      
+      .child2 {
+        margin-top:-20px;
+        margin-left: 20px;
+        width: 100px;
+        height: 100px;
+        background-color: #00f;
+      }
+      ```
+
+      ```
+      <div class="box">
+        <div class="child1"></div>
+        <div class="child2"></div>
+      </div>
+      ```
+
+      ![Snip20191125_4](Snip20191125_4.png) 
+
+  - 一个是定位元素,一个是非定位元素
+
+    - **定位元素会层叠在非定位元素上面**, 定位元素可以盖住非定位元素. 
+
+  - 都是定位元素
+
+    - 使用CSS属性 `z-index` 来控制层叠顺序
+
+
+
+### 2. z-index 属性
+
+
+
+- `z-index` 属性是用来设置**定位元素** 的层叠顺序的 (**仅对定位元素有效**)
+
+  > 注意, 不要用来设置非定位元素, 因为非定位元素绝对是被定位元素盖住的. 
+  >
+  > 因此, 不存在设置非定位元素的层叠优先级
+
+- `z-index` 的取值可以是` 正整数` `负整数`  `0`,  `z-index` 的默认值不是0, 是auto, 默认不参与比较
+
+
+
+- **比较原则**
+
+  - 如果是兄弟关系 (层叠关系比较z-index 即可)
+    - `z-index` 越大, 层叠在越上面
+    - `z-index` 相等, 写在后面的那个元素层叠在上面
+  - 如果不是兄弟关系
+    - 各自从元素自己以及祖先元素中, 找出最相邻的2个定位元素进行比较
+    - 而且这2个定位元素必须有设置`z-index` 的具体数值
+
+  ![Snip20191125_5](Snip20191125_5.png) 
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 十八. 浮动
+
+
+
+## 1. 定位方案 (Position Schemes)
+
+- 在CSS 中, 有3种常用的方法对元素进行定位/ 布局
+  - 标准流/ 正常流 (normal flow)
+  - 绝对定位 (absolute positioning)
+  - 浮动 (float)
+- **绝对定位和浮动都会让元素脱离标准流, 以达到灵活布局的效果**
+
+
+
+
+
+
+
+
+
+## 2. CSS 属性- float
+
+- 可以通过`float` 属性让元素产生浮动的效果, float的常用取值有:
+
+  - `none` 不浮动, 所有元素`float` 属性默认值就是`none`
+
+  - `left` 向左浮动
+
+  - `right` 向右浮动
+
+    > 不论float的属性值是left 还是 right 都会让元素脱离标准流.
+
+
+
+
+
+
+
+## 3. 浮动的规则 (*) 很重要
+
+
+
+> 需要记住浮动的这些规则, 否则以后会出现一些莫名其妙的问题, 到时找不到问题的解决方法
+
+
+
+- **元素一旦浮动后** 
+
+  - 脱离标准流
+
+  - 朝着向左或者向右方向移动, 直到自己的边界紧贴着包含块(一般是父元素)或者其他浮动元素的边界为止.
+
+  - **定位元素会层叠在浮动元素上** 
+
+    ```
+    <style> 
+    .box {
+      width: 200px;
+      height: 200px;
+      margin-left: 30px;
+      background-color: rgba(255,0,0,0.8);
+      position: absolute;
+    } 
+    .box2 {
+      width: 50px;
+      height: 50px;
+      background-color: #0f0;
+      float: left;
+    } 
+    </style>
+    ```
+
+    ```
+    <body>
+      <div class="box"></div>
+      <div class="box2"></div>
+    </body>
+    ```
+
+    ![Snip20191125_6](Snip20191125_6.png) 
+
+
+
+- **浮动元素不能与行内级内容层叠, 行内级内容将会被浮动元素推出/ 赶出去**  
+
+  - 比如: 行内级元素, inline-block 元素
+
+  ![Snip20191125_10](Snip20191125_10.png)
+
+  
+
+- 利用浮动元素不能与行内级元素层叠的特性, 我们可以轻松实现文字环绕的效果.
+
+  ![Snip20191125_11](Snip20191125_11.png) 
+
+
+
+- **行内级元素/ inline-block 元素浮动后, 其顶部将与所在行的顶部对齐** 
+
+![Snip20191125_14](Snip20191125_14.png)  
+
+- 如果元素是向左(右)浮动, 浮动元素的左(右)边界不能超出包含块的左(右) 边界
+
+  ![Snip20191125_15]( Snip20191125_15.png) 
+
+
+
+- 浮动的元素之间是不能层叠的
