--- a/001.md
+++ b/001.md
@@ -5506,7 +5506,7 @@ div {
 
 
 
-- **元素一旦浮动后** 
+- **1. 元素一旦浮动后** 
 
   - 脱离标准流
 
@@ -5543,7 +5543,7 @@ div {
 
 
 
-- **浮动元素不能与行内级内容层叠, 行内级内容将会被浮动元素推出/ 赶出去**  
+- **2. 浮动元素不能与行内级内容层叠, 行内级内容将会被浮动元素推出/ 赶出去**  
 
   - 比如: 行内级元素, inline-block 元素
 
@@ -5557,14 +5557,47 @@ div {
 
 
 
-- **行内级元素/ inline-block 元素浮动后, 其顶部将与所在行的顶部对齐** 
+- **3. 行内级元素/ inline-block 元素浮动后, 其顶部将与所在行的顶部对齐** 
 
 ![Snip20191125_14](Snip20191125_14.png)  
 
-- 如果元素是向左(右)浮动, 浮动元素的左(右)边界不能超出包含块的左(右) 边界
+- 4. 如果元素是向左(右)浮动, 浮动元素的左(右)边界不能超出包含块的左(右) 边界
 
   ![Snip20191125_15]( Snip20191125_15.png) 
 
 
 
-- 浮动的元素之间是不能层叠的
+- 5. 浮动的元素之间是不能层叠的
+
+  >  这也是为什么左浮动或右浮动元素没有足够空间时会向下移动的原因
+
+  - 如果一个元素浮动, 另一个浮动元素已经在那个位置了, 后浮动的元素将紧贴着前一个浮动元素
+  - 如果水平方向剩余的空间不够现实浮动元素, 浮动元素将向下移动, 知道有充足的空间为止.
+
+  ![Snip20191126_1](Snip20191126_1.png) 
+
+
+
+- **6. 浮动元素的顶端不能超过包含块的顶端, 也不能超过之前所有浮动元素的顶端(即, 浮动是有顺序的)**
+
+  > 后浮动的元素浮动后不能超过前面浮动元素的顶端, 这一点很容易忽略
+
+  ![Snip20191126_13](Snip20191126_13.png) 
+
+  
+
+- **7.浮动后的元素顶部绝对不会搞过浮动前.**  换句话说, 浮动是分先后的
+
+  ![Snip20191126_15](Snip20191126_15.png) 
+
+
+
+## 4. 浮动元素的特点 总结
+
+1. 元素浮动后脱标, 脱标的元素宽高由内容确定, 脱标后元素不再区分块级和行内, 脱标的元素可以随意设置宽高
+2. 浮动的元素盖在标准流的元素上, 定位的元素盖在浮动的元素上
+3. 浮动的元素不能与行内级元素层叠, 会将行内级内容挤出去
+4. 浮动的元素之间是不能层叠的
+5. 浮动的元素不能超出包含块的左右
+6. 后浮动的元素顶部不能超过先浮动的元素
+7. 元素左浮动/ 右浮动, 浮动后的元素顶部绝对不会搞过浮动前.
